fixed overflow media-wrapper

--- a/styles/media.less
+++ b/styles/media.less
@@ -7,6 +7,7 @@
     background-position: center center;
     background-size: contain;
     background-repeat: no-repeat;
+    overflow-y: auto;
 
     .media-close {
         position: absolute;
